<resources>
    <string name="app_name" translatable="false">黎明岛K</string>
    <string name="just_now" translatable="false">刚刚</string>
    <string name="some_minutes_ago" translatable="false">%d 分钟前</string>
    <string name="some_hours_ago" translatable="false">%d 小时前</string>
    <string name="yesterday" translatable="false">昨天</string>
    <string name="some_days_ago" translatable="false">%d 天前</string>
    <string name="from_the_future" translatable="false">来自未来</string>
    <string name="submit" translatable="false">确认</string>
    <string name="delete" translatable="false">删除</string>
    <string name="uncheck_all_items" translatable="false">清除全部选择</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="close" translatable="false">关闭</string>
    <string name="save" translatable="false">保存</string>
    <string name="do_not_save" translatable="false">不保存</string>
    <string name="select_picture" translatable="false">选择图片</string>
    <string name="report_reasons" translatable="false">举报理由</string>
    <string name="pick_color" translatable="false">选择颜色</string>
    <string name="check_forum_msg" translatable="false">查看版规</string>
    <string name="choose_forum" translatable="false">选择版块</string>
    <string name="edit_text_hint" translatable="false">在这里输入文字</string>
    <string name="please_input_valid_text" translatable="false">请输入有效文字</string>
    <string name="please_input_page_number" translatable="false">请输入有效页数</string>
    <string name="watermark" translatable="false">水印</string>
    <string name="missing_cookie" translatable="false">没有饼干</string>
    <string name="count_text" translatable="false">%d / %d</string>
    <string name="title" translatable="false">标题</string>
    <string name="email_address" translatable="false">邮箱</string>
    <string name="name" translatable="false">名称</string>
    <string name="need_cookie_to_read" translatable="false">没有饼干! 不能看99页以后的内容...</string>
    <string name="search" translatable="false">搜索</string>
    <string name="jump_to_post" translatable="false">跳转至串</string>
    <string name="new_post" translatable="false">发布新串</string>
    <string name="please_comply_rules" translatable="false">请遵守A岛版规</string>
    <string name="acknowledge_post_rules" translatable="false">我已阅读理解并同意遵守全部版规和免责声明</string>
    <string name="reply_comment" translatable="false">回复</string>
    <string name="copy_comment" translatable="false">内容</string>
    <string name="copy_id" translatable="false">串号</string>
    <string name="my_feed" translatable="false">我的订阅</string>
    <string name="feedId" translatable="false">订阅ID</string>
    <string name="edit_cookie_remark" translatable="false">编辑饼干备注</string>
    <string name="default_cookie_name" translatable="false">默认饼干名称</string>
    <string name="time_display_format" translatable="false">时间显示格式</string>
    <string name="default_theme_setting" translatable="false">设置默认主题</string>
    <string name="animation_first_only" translatable="false">仅在首次出现时显示动画</string>
    <string name="animation_settings" translatable="false">编辑动画效果</string>
    <string name="cookie_management" translatable="false">饼干管理</string>
    <string name="add_cookie" translatable="false">添加饼干</string>
    <string name="select_cookie" translatable="false">选择饼干</string>
    <string name="select_target_forum" translatable="false">选择发布版块</string>
    <string name="settings" translatable="false">设置</string>
    <string name="browsing_history" translatable="false">浏览历史</string>
    <string name="post_history" translatable="false">发言历史</string>
    <string name="common_forum_setting" translatable="false">常用版块设置</string>
    <string name="common_forum_count" translatable="false">常用版块包含%d个版块</string>
    <string name="common_forums_title" translatable="false">常用版块: %d</string>
    <string name="timeline_filter_setting" translatable="false">时间线屏蔽设置</string>
    <string name="timeline_filtered_count" translatable="false">时间线已经屏蔽%d个版块</string>
    <string name="please_select_timeline_filter_forums" translatable="false">请选择要屏蔽的版块</string>
    <string name="common_forum_setting_help" translatable="false"><b>点击下方版块即添加至常用分组\n\n长按并上下拖曳版块可排序\n\n长按并左右拖曳版块可从常用分组中移除\n\n编辑完成后返回即保存设置</b></string>
    <string name="pager_usage_help" translatable="false">本页面支持左滑右滑切换内容。\n\n可在自定义设置改变默认页面</string>
    <string name="default_forum_setting" translatable="false">App启动默认打开版块设置</string>
    <string name="communities_expansion_setting" translatable="false">默认展开版块设置</string>
    <string name="communities_expansion_setting_summary" translatable="false">默认展开板块: %s</string>
    <string name="common_posts_setting" translatable="false">常用串设置</string>
    <string name="add_common_post" translatable="false">添加常用串</string>
    <string name="add_common_post_remark" translatable="false">常用串备注</string>
    <string name="add_common_post_id" translatable="false">常用串串号</string>
    <string name="common_posts_title" translatable="false">常用串: %d</string>
    <string name="common_posts_setting_help" translatable="false"><b>输入串号备注添加至常用串\n\n长按并上下拖曳串可排序\n\n长按并左右拖曳串可从常用串中移除\n\n编辑完成后返回即保存设置</b></string>
    <string name="common_posts_count" translatable="false">常用串包含%d个串</string>
    <string name="emoji_setting_help" translatable="false"><b>输入添加颜文字\n\n颜文字默认按添加顺序排序，可设置为按最后使用时间排序\n\n长按并上下拖曳颜文字可排序\n\n长按并左右拖曳可移除颜文字\n\n编辑完成后返回即保存设置</b></string>
    <string name="emoji_restore" translatable="false"><b>恢复颜文字至默认设置\n\n此次操作将删除用户自定义颜文字\n\n是否确认删除?</b></string>
    <string name="emoji_remark" translatable="false">颜文字备注</string>
    <string name="emoji_value" translatable="false">颜文字内容</string>
    <string name="general_settings" translatable="false">通用设置</string>
    <string name="display_settings" translatable="false">显示设置</string>
    <string name="custom_settings" translatable="false">自定义设置</string>
    <string name="help" translatable="false">帮助</string>
    <string name="restore" translatable="false">恢复默认设置</string>
    <string name="about" translatable="false">关于</string>
    <string name="trend" translatable="false">本周热榜</string>
    <string name="nmbxd_title" translatable="false">X岛</string>
    <string name="tnmb_title" translatable="false">备胎岛</string>
    <string name="toolbar_subtitle_nmbxd" translatable="false">X岛 · nmbxd.com</string>
    <string name="toolbar_subtitle_tnmb" translatable="false">备胎岛 · tnmb.org</string>
    <string name="need_cookie_to_post" translatable="false">没有饼干不能发串哦。。</string>
    <string name="need_content_to_post" translatable="false">:(没有上传的内容或文件</string>
    <string name="please_give_permission_and_try_again" translatable="false">请给予权限并重复操作</string>
    <string name="please_try_again" translatable="false">请重复操作</string>
    <string name="please_try_again_later" translatable="false">请稍后再试</string>
    <string name="content_copied" translatable="false">%s已复制</string>
    <string name="might_need_to_restart_to_apply_setting" translatable="false">设置没有生效时请清除程序后台并重新启动</string>
    <string name="restart_to_apply_setting" translatable="false">设置将在重启后生效（需要清除后台）</string>
    <string name="save_image_selection" translatable="false">要保存图片吗?</string>
    <string name="cannot_load_image_file" translatable="false">无法读取图片文件</string>
    <string name="saving_image" translatable="false">正在保存图片...</string>
    <string name="sending" translatable="false">正在发送中...</string>
    <string name="processing" translatable="false">正在处理中...</string>
    <string name="something_went_wrong" translatable="false">发生未知错误...</string>
    <string name="did_not_select_forum_id" translatable="false">发生错误：没有选择版块</string>
    <string name="image_does_not_exist" translatable="false">图片不存在</string>
    <string name="image_saved" translatable="false">图片保存在Pictures/Dawn</string>
    <string name="image_already_exists_in_picture" translatable="false">已保存图片，同时检测到图库中有相同名字的图片。默认图库可能不会显示新图片，但是在文件管理器下可见，请勿重复保存</string>
    <string name="did_not_get_cookie_from_image" translatable="false">没有读取到饼干。。请检查图片</string>
    <string name="press_again_to_exit" translatable="false">再按一次以退出应用</string>
    <string name="radius" translatable="false">圆角</string>
    <string name="elevation" translatable="false">阴影</string>
    <string name="main_text_size" translatable="false">主字号</string>
    <string name="line_height" translatable="false">行间距</string>
    <string name="seg_gap" translatable="false">段间距</string>
    <string name="letter_space" translatable="false">字间距</string>
    <string name="card_margin_top" translatable="false">卡片间距</string>
    <string name="card_margin_left" translatable="false">卡片左边距</string>
    <string name="card_margin_right" translatable="false">卡片右边距</string>
    <string name="head_bar_margin_top" translatable="false">头部上边距</string>
    <string name="content_margin_top" translatable="false">内容上边距</string>
    <string name="content_margin_left" translatable="false">内容左边距</string>
    <string name="content_margin_right" translatable="false">内容右边距</string>
    <string name="content_margin_bottom" translatable="false">内容下边距</string>
    <string name="sage_text" translatable="false">本串已被sage</string>
    <string name="sample_ref_id" translatable="false">No.23333333</string>
    <string name="ref_id_formatted" translatable="false">No.%s</string>
    <string name="sample_user_hash" translatable="false">UserHash</string>
    <string name="sample_comment_content" translatable="false">测试测试测试</string>
    <string name="sample_timestamp_plain" translatable="false">2/7 23:23:12</string>
    <string name="sample_title_and_name" translatable="false">标题：哈哈哈\n作者：咩咩咩</string>
    <string name="number_prefix" translatable="false">No.</string>
    <string name="sample_timestamp_simplified" translatable="false">2小时前</string>
    <string name="sample_forum_and_reply_count" translatable="false">欢乐恶搞 · 12</string>
    <string name="sample_post_content" translatable="false">北分则易红在保，干品政两报米术，料询容保美。\n该府术没也例空解，法露作长心录。 六深事会部青目传向市始，西法医很呀体近数片。\n活林变须阶候业精六只团起已市，下头却广局正支。</string>
    <string name="image_description" translatable="false">图片</string>
    <string name="sample_trend_rank" translatable="false">13</string>
    <string name="sample_forum" translatable="false">欢乐恶搞</string>
    <string name="sample_trend_hits" translatable="false">256</string>
    <string name="current_page" translatable="false">当前页数:</string>
    <string name="sample_int" translatable="false">1</string>
    <string name="total_page" translatable="false">总页数:</string>
    <string name="page_jump" translatable="false">跳页</string>
    <string name="subscribe" translatable="false">收藏</string>
    <string name="share" translatable="false">分享</string>
    <string name="please_select_target_forum" translatable="false">请选择发布版块</string>
    <string name="cookie_name" translatable="false">饼干名字</string>
    <string name="cookie_hash" translatable="false">饼干序列</string>
    <string name="cookie_slots" translatable="false">饼干槽:</string>
    <string name="saves_reading_progress" translatable="false">保存阅读进度</string>
    <string name="auto_update_feed" translatable="false">订阅追更</string>
    <string name="auto_update_feed_on" translatable="false">使用黎明岛时定期更新订阅的串并提示新回复</string>
    <string name="auto_update_feed_off" translatable="false">不自动检查订阅更新状态</string>
    <string name="auto_update_feed_dot" translatable="false">订阅追更提示红点</string>
    <string name="auto_update_feed_dot_on" translatable="false">发现更新时在图标上显示红点</string>
    <string name="auto_update_feed_dot_off" translatable="false">即使有更新时也不显示红点</string>
    <string name="view_caching" translatable="false">缓存页面(Alpha)</string>
    <string name="report" translatable="false">举报</string>
    <string name="forum" translatable="false">版块</string>
    <string name="trend_and_feed" translatable="false">热榜 · 订阅</string>
    <string name="history" translatable="false">浏览 · 发言</string>
    <string name="my_profile" translatable="false">个人</string>
</resources>