<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="12dp"
    android:paddingTop="8dp"
    android:paddingRight="12dp">

    <TextView
        android:id="@+id/sage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sage_text"
        android:textColor="#B9FF0F0F"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userId" />

    <TextView
        android:id="@+id/refId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_ref_id"
        android:textAppearance="@style/ContentBarText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_user_id"
        android:textAppearance="@style/ContentBarText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:scrollbars="vertical"
        android:text="@string/sample_reply_content"
        android:textColor="@color/mainContentTextColor"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_timestamp_plain"
        android:textAppearance="@style/ContentBarText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/refId"
        app:layout_constraintStart_toStartOf="@id/userId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleAndName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_title_and_name"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sage" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="userId,sage,titleAndName" />

    <TextView
        android:id="@+id/numberPrefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_prefix"
        android:textAppearance="@style/ContentBarText"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/refId"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/attachedImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/image_description"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/expandSummary"
        style="@style/DawnOutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/ic_expand_more_24px"
        app:layout_constraintBottom_toBottomOf="@id/bottomBorder"
        app:layout_constraintEnd_toEndOf="@id/refId"
        app:layout_constraintStart_toStartOf="@id/userId"
        app:layout_constraintTop_toBottomOf="@id/attachedImage" />

    <View
        android:id="@+id/bottomBorder"
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:layout_marginTop="2dp"
        android:background="#E0E0E0"
        app:layout_constraintTop_toBottomOf="@id/expandSummary"
        tools:layout_editor_absoluteX="12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

