<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/full_round_corner_background">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="8dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/sage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sage_text"
            android:textColor="#B9FF0F0F"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quoteCookie" />

        <TextView
            android:id="@+id/quoteId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_ref_id"
            android:textAppearance="@style/ContentBarText"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quoteCookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_user_id"
            android:textAppearance="@style/ContentBarText"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quoteContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/sample_reply_content"
            android:textColor="@color/mainContentTextColor"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:maxLines="15"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/quoteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sample_timestamp_plain"
            android:textAppearance="@style/ContentBarText"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/quoteCookie"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quoteTitleAndName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_title_and_name"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sage" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="quoteCookie,sage,quoteTitleAndName"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="731dp" />

        <TextView
            android:id="@+id/quoteIdSuffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_prefix"
            android:textAppearance="@style/ContentBarText"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@id/quoteId"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/quoteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:layout_marginTop="3dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quoteContent"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/image_description" />

        <View
            android:id="@+id/bottomBorder"
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:layout_marginTop="8dp"
            android:background="#E0E0E0"
            app:layout_constraintTop_toBottomOf="@id/quoteImage"
            tools:layout_editor_absoluteX="12dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

