<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="9dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="9dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="15dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        app:layout_optimizationLevel="standard|dimensions">

        <View
            android:id="@+id/trendDivider"
            android:layout_width="1px"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="#D2D2D2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/trendRank"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trendRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_trend_rank"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trendForum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/label_background"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:text="@string/sample_forum"
            android:textColor="#FCFCFC"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sample_thread_content"
            android:textColor="@color/mainContentTextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/trendDivider"
            app:layout_constraintTop_toBottomOf="@+id/trendForum" />

        <TextView
            android:id="@+id/refId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sample_ref_id"
            app:layout_constraintStart_toEndOf="@id/trendDivider"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/sample_trend_hits"
            android:textColor="#FF9393"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/fireIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fireIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/content"
            app:layout_constraintStart_toEndOf="@+id/refId"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_whats_hot_24px"
            app:tint="#FB3E3E"
            android:contentDescription="@string/image_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
