<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:paddingLeft="12dp"
    android:paddingTop="4dp"
    android:paddingRight="12dp"
    app:layout_optimizationLevel="standard|dimensions"
    tools:viewBindingIgnore="true">

    <TextView
        android:id="@+id/sage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/sage_text"
        android:textColor="#B9FF0F0F"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userId" />

    <TextView
        android:id="@+id/refId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/sample_ref_id"
        android:textAppearance="@style/SecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/sample_user_id"
        android:textAppearance="@style/SecondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.laotoua.dawnislandk.screens.widget.LinkifyTextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:focusable="false"
        android:paddingBottom="2dp"
        android:scrollbars="vertical"
        android:text="@string/sample_comment_content"
        android:textAppearance="@style/PrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/sample_timestamp_plain"
        android:textAppearance="@style/SecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sage" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="name" />

    <ImageView
        android:id="@+id/attachedImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/image_description"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/expandSummary"
        style="@style/DawnOutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingEnd="2dp"
        android:visibility="gone"
        app:icon="@drawable/ic_expand_more_24px"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="@id/timestamp"
        app:layout_constraintStart_toStartOf="@id/userId"
        app:layout_constraintTop_toBottomOf="@id/attachedImage"
        tools:ignore="RtlSymmetry" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/timestamp"
        app:layout_constraintStart_toStartOf="@id/userId"
        app:layout_constraintTop_toBottomOf="@id/expandSummary"
        app:layout_goneMarginBottom="2dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/comment"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reply_comment"
            app:icon="@drawable/ic_edit_24px"
            app:layout_constraintEnd_toStartOf="@id/copy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/copy"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/copy_comment"
            app:icon="@drawable/ic_text_snippet_24px"
            app:layout_constraintEnd_toStartOf="@id/report"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/comment"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/report"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/report"
            app:icon="@drawable/ic_report_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/copy"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottomBorder"
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:layout_marginTop="2dp"
        android:background="#E0E0E0"
        app:layout_constraintTop_toBottomOf="@id/commentMenu"
        tools:layout_editor_absoluteX="12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

